adding count resource domain